[gd_scene load_steps=2 format=3 uid="uid://cvw7ep8jmdafa"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_vpf18"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpf18")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MainMenu" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="NewGame" type="Button" parent="VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "New Game"

[node name="LoadGame" type="Button" parent="VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Load Game"

[node name="Quit" type="Button" parent="VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Saves" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Save1" type="Button" parent="VBoxContainer/Saves"]
layout_mode = 2
size_flags_vertical = 3
text = "Save 1"

[node name="Save2" type="Button" parent="VBoxContainer/Saves"]
layout_mode = 2
size_flags_vertical = 3
text = "Save 2"

[node name="Save3" type="Button" parent="VBoxContainer/Saves"]
layout_mode = 2
size_flags_vertical = 3
text = "Save 3"

[connection signal="pressed" from="VBoxContainer/MainMenu/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu/Quit" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Saves/Save1" to="." method="_on_save_pressed" binds= [0]]
[connection signal="pressed" from="VBoxContainer/Saves/Save2" to="." method="_on_save_pressed" binds= [1]]
[connection signal="pressed" from="VBoxContainer/Saves/Save3" to="." method="_on_save_pressed" binds= [2]]
